          Thanks to Cyril Brulebois.
        - While splitting heterogeneous actions, set '--force-depends' dpkg
          option for commands with more than one package as argument even for
          safe-as-a-whole operations. Dpkg cannot handle gracefully them now
          in some cases. Thanks to James Vega. (Closes: #545496)
    - Config:
      - New option 'cupt::resolver::quality-bar'.
  * debian/control:
    - Updated my mail address.
    - Inserted versioned dependency on liblist-moreutils-perl (>= 0.23).
      Earlier versions had tricky bug in 'none' subroutine. Thanks to
      Cyril Brulebois.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 02 Sep 2009 14:13:54 +0300

cupt (0.6.4) unstable; urgency=low

  * Cupt:
    - Config:
      - Recognize new APT 'acquire::compressiontypes::*' variables.
    - Download:
      - Methods/Curl:
        - Delete partially downloaded file and restart download if the server
          don't support resuming. Thanks to Bernd Zeimetz. (Closes: #544186)
    - System:
      - Resolvers/Native:
        - Display descriptive error message when manually selected version of
          package cannot be updated because of the option
          'cupt::resolver::synchronize-source-versions' set to 'hard'.
        - Don't fail to synchronize already sticked binary package with the
          same source version.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 31 Aug 2009 23:59:45 +0300

cupt (0.6.3) unstable; urgency=medium

  * cupt:
    - Don't crash on actions confirmation when the user answer is not
      available (end of file, read error etc.)
  * Cupt:
    - Download:
      - Methods/Curl:
        - Enable sharing cookies database and DNS cache for multiple
          downloads.
    - System:
      - Resolvers/Native:
        - Fixed a very tricky regression since 0.6.0 with passing status of
          packages to worker that causes the situation that some of