@@ -779,12 +779,12 @@ acquire::*::timeout, acquire::*::proxy, acquire::retries,
 apt::acquire::translation, apt::cache::allversions, apt::cache::important,
 apt::cache::namesonly, apt::cache::recursedepends, apt::default-release,
 apt::install-recommends, apt::install-suggests, apt::neverautoremove,
-apt::get::allowunauthenticated, dir, dir::bin::dpkg, dir::cache,
-dir::cache::archives, dir::etc, dir::etc::sourcelist, dir::etc::sourceparts,
-dir::etc::parts, dir::etc::main, dir::etc::preferences, dir::state,
-dir::state::extendedstates, dir::state::lists, dir::state::status,
-dpkg::options, dpkg::pre-invoke, dpkg::post-invoke, dpkg::pre-install-pkgs,
-gpgv::trustedkeyring, quiet
+apt::get::allowunauthenticated, apt::get::automatic-remove, dir,
+dir::bin::dpkg, dir::cache, dir::cache::archives, dir::etc,
+dir::etc::sourcelist, dir::etc::sourceparts, dir::etc::parts, dir::etc::main,
+dir::etc::preferences, dir::state, dir::state::extendedstates,
+dir::state::lists, dir::state::status, dpkg::options, dpkg::pre-invoke,
+dpkg::post-invoke, dpkg::pre-install-pkgs, gpgv::trustedkeyring, quiet
 
 See L<apt.conf(5)> for their meanings.
 
